NTR - add dynamic routing / fix styling / update README.md

--- a/src/components/product/components/productContent/style.css
+++ b/src/components/product/components/productContent/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     left: 50%;
     top: 0;
-    width: auto;
+    width: 50%;
     height: inherit;
     margin: 5px;
     padding: 50px;
